modules/gdscript/tests/scripts/parser/errors/uid_too_late.gd
extends Object
@uid("uid://c4ckv3ryprcn4")

func test():
    pass
